<resources>

    <string name="app_name">Secure Notes</string>
    <string name="add_note">Add note</string>
    <string name="title_note">Title</string>
    <string name="content_note">Content</string>
    <string name="timestamp">Last modified: </string>
    <string name="create_pin">Set your PIN</string>
    <string name="info_pin">This PIN will protect your data</string>
    <string name="settings_pin">Insert 4 or more digits</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="save_pin">Save PIN</string>
    <string name="insert_pin">Insert PIN</string>
    <string name="pin">PIN</string>
    <string name="unlock">Unlock</string>
    <string name="menu_pin">Pin</string>
    <string name="menu_unpin">Unpin</string>
    <string name="menu_delete">Delete</string>
    <string name="dashboard_title_notes">Note</string>
    <string name="dashboard_title_files">File</string>
    <string name="dash_settings">Settings</string>
    <string name="sec_settings">Security Settings</string>
    <string name="change_pin">Change PIN</string>
    <string name="session_timeout">Auto-Lock Timeout (App in background)</string>
    <string name="timeout_one_min">1 Minutes</string>
    <string name="timeout_three_min">3 Minutes (Default)</string>
    <string name="timeout_five_min">5 Minutes</string>
    <string name="data_management">Data Management</string>
    <string name="export_enc_backup">Export Encrypted Backup</string>
    <string name="password_backup">Password Backup</string>
    <string name="advice_password_backup">Choose a secure password. If you forgot it, you will lose your backup</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_requirements">Requirements: 12 char (at least 1 upper, 1 num, 1 symbol)</string>
    <string name="error">Error</string>
    <string name="verify_identity">Verify identity</string>
    <string name="auth_required">"Authentication required"</string>
    <string name="use_pin">"Use PIN"</string>
    <string name="access_sec_notes">Access to SecureNotes</string>
    <string name="pins_not_equal">PINs don\'t match</string>
    <string name="passwords_not_equal">Passwords are not the same</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="cancel">Cancel</string>
    <string name="pin_changed">PIN successfully changed!</string>
    <string name="delete_note">Are you sure you want to delete this note?</string>
    <string name="delete_file">Are you sure you want to delete this file?</string>
    <string name="start">Start</string>
    <string name="create_backup">Create backup</string>
    <string name="weak_password">Weak password. Respect requirements above</string>
    <string name="timeout_updated">Timeout successfully updated</string>
    <string name="no_data_to_backup">No data to backup</string>
    <string name="insert_old_pin">Insert old PIN</string>
    <string name="backup_running">Backup in progress</string>
    <string name="backup_saved">Backup saved in Download/SecureNotes/</string>
    <string name="backup_failed">Backup failed</string>
    <string name="import_file">Import file</string>
    <string name="no_app_found">No App found to open this file</string>
    <string name="file_imported">File successfully imported</string>
    <string name="file_not_imported">Importation failed</string>
    <string name="file_deleted">File deleted</string>
    <string name="file_not_deleted">Error during deletion file</string>
    <string name="device_not_safe">Device Not Safe</string>
    <string name ="rooted_device">"Root detected in this device.\n\n" +
    "For security of your encrypted data, SecureNotes can't run in a compromise environment."</string>
    <string name="tampered_app">Integrity of application is compromised. Impossible to run Secure Notes</string>
    <string name="close_app">Close App</string>


</resources>