<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec_settings"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="?android:attr/colorPrimary"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnChangePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_pin"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_timeout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:attr/colorPrimary"
        android:layout_marginBottom="8dp" />

    <RadioGroup
        android:id="@+id/radioGroupTimeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <RadioButton
            android:id="@+id/radio1Min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeout_one_min" />

        <RadioButton
            android:id="@+id/radio3Min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeout_three_min" />

        <RadioButton
            android:id="@+id/radio5Min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeout_five_min" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_management"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:attr/colorPrimary"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnExportBackup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_enc_backup" />

</LinearLayout>