<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imageViewPin"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_pin"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_note"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/imageViewPin"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/textViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_note"
            android:textSize="14sp"
            android:layout_below="@id/textViewTitle"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/imageViewPin"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/textViewTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/timestamp"
            android:textSize="12sp"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_below="@id/textViewContent"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>